force-app/main/default/objects/Needs_Analysis__c/Needs_Analysis__c.object-meta.xml
<CustomObject>
    <label>Needs Analysis</label>
    <nameField>
        <label>Needs Analysis Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Needs Analysis</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>