force-app/main/default/objects/Needs_Analysis__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Needs Analysis</relationshipLabel>
    <relationshipName>Needs_Analysis_Lead</relationshipName>
    <type>Lookup</type>
</CustomField>