force-app/main/default/objects/Needs_Analysis__c/fields/Needs_Captured__c.field-meta.xml
<CustomField>
    <fullName>Needs_Captured__c</fullName>
    <label>Needs Captured</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>