force-app/main/default/objects/Needs_Analysis__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Needs Analysis</relationshipLabel>
    <relationshipName>Needs_Analysis_Opps</relationshipName>
    <type>Lookup</type>
</CustomField>