force-app/main/default/objects/Needs_Analysis__c/fields/Recommendation_Captured__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Captured__c</fullName>
    <label>Recommendation Captured</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>